fix: text-align in date-column fixed

--- a/src/scss/modules/statistic.scss
+++ b/src/scss/modules/statistic.scss
@@ -54,13 +54,14 @@
 .date-column {
   grid-column: 1;
   grid-row: 3;
-  display: flex;
+  display: flex; 
   justify-self: end;
   margin: 0;
   &__list {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    text-align: right;
   }
 }
 .glass-column {
